--- a/index.html
+++ b/index.html
@@ -14,32 +14,25 @@
 
     <title>Frontend Mentor | Social links profile</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <img src="./assets/images/samuel-avatar.jpg" alt="" width="100px" />
-      <h1>Samuel Adu</h1>
-      <p>Birmingham, United Kingdom</p>
-      <p>"Front-end developer and Arsenal fan."</p>
+    <main class="card">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="" class="avatar" />
+      <h1 class="name">Jessica Randall</h1>
+      <p class="location">London, United Kingdom</p>
+      <p class="bio">"Front-end developer and avid reader."</p>
       <ul>
         <li>
-          <a href="https://www.github.com">GitHub</a>
+          <a href="https://www.github.com/samuel-adu">GitHub</a>
         </li>
         <li>
-          <a href="https://www.frontendmentor.io">Frontend Mentor</a>
+          <a href="https://www.frontendmentor.io/profile/samuel-adu"
+            >Frontend Mentor</a
+          >
         </li>
         <li>
-          <a href="https://www.linkedin.com/samuel-oa">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/samuel-oa/">LinkedIn</a>
         </li>
         <li>
           <a href="#">Twitter</a>
