--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   </head>
   <body>
     <main class="card">
-      <img src="./assets/images/avatar-jessica.jpeg" alt="" class="avatar" />
-      <h1 class="name">Jessica Randall</h1>
-      <p class="location">London, United Kingdom</p>
-      <p class="bio">"Front-end developer and avid reader."</p>
+      <img src="./assets/images/samuel-avatar.jpg" alt="" class="avatar" />
+      <h1 class="name">Samuel Adu</h1>
+      <p class="location">Birmingham, United Kingdom</p>
+      <p class="bio">"Front-end developer and Arsenal fan."</p>
       <ul>
         <li>
           <a href="https://www.github.com/samuel-adu">GitHub</a>
