add twitter and  instagram link, and update screenshot

--- a/index.html
+++ b/index.html
@@ -24,21 +24,27 @@
       <p class="bio">"Front-end developer and Arsenal fan."</p>
       <ul>
         <li>
-          <a href="https://www.github.com/samuel-adu">GitHub</a>
+          <a href="https://www.github.com/samuel-adu" target="_blank">GitHub</a>
         </li>
         <li>
-          <a href="https://www.frontendmentor.io/profile/samuel-adu"
+          <a
+            href="https://www.frontendmentor.io/profile/samuel-adu"
+            target="_blank"
             >Frontend Mentor</a
           >
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/samuel-oa/">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/samuel-oa/" target="_blank"
+            >LinkedIn</a
+          >
         </li>
         <li>
-          <a href="#">Twitter</a>
+          <a href="https://www.x.com/sxmueladu" target="_blank">Twitter</a>
         </li>
         <li>
-          <a href="#">Instagram</a>
+          <a href="https://www.instagram.com/sxmueladu" target="_blank"
+            >Instagram</a
+          >
         </li>
       </ul>
     </main>
